# recording_openni2_primesense

./: .gitignore  CMakeLists.txt
src/: main.cpp  sliders.ui  viewer_save.cpp  viewer_visualizer.cpp
